--- a/assets/styles/variables/_colors.scss
+++ b/assets/styles/variables/_colors.scss
@@ -1,3 +1,8 @@
-$primary_color: #333333;
-$secondary_color: #FF851B;
+$primary_color: #2c96dd;
+$primary_color_hover: #0065a9;
+$secondary_color: #33495e;
 $primary_light: #ffffff;
+$green: #50e3a4;
+$green_hover: #00d278;
+$red: #f34d4d;
+$red_hover: #da0000;
