--- a/assets/styles/layout/_global.scss
+++ b/assets/styles/layout/_global.scss
@@ -3,3 +3,9 @@ html, body {
   padding: 0;
   font-family: $font_roboto;
 }
+
+@import '~sweetalert2/src/variables';
+
+$swal2-background: #990000;
+
+@import '~sweetalert2/src/sweetalert2';
